# zcash-signer

./: .gitignore  Cargo.toml  Config.plist  DEBUGGING.md  Package.swift  README.md  build-xcframework.sh
.cargo/: config.toml
Sources/CZcashSigner/: shim.c
Sources/CZcashSigner/include/: module.modulemap  zcash_signer.h
Sources/Secp256k1Stubs/: Secp256k1Stubs.c  secp256k1_stubs.c
Sources/Secp256k1Stubs/include/: Secp256k1Stubs.h
Sources/WalletCoreStubs/: WalletCoreStubs.c
Sources/WalletCoreStubs/include/: WalletCoreStubs.h
Sources/ZcashSignerSwift/: ZcashSignerWrapper.swift
Tests/: address_derivation.rs  orchard_derivation.rs  ufvk_encoding.rs
Tests/WalletCoreStubSymbols/: WalletCoreStubs.c
Tests/ZcashSignerCoreTests/: CallbackRngBridgeTests.swift
docs/: ARCHITECTURE.md
include/: zcash_signer.h
pczt-cli/: README.md  main.swift
pczt-cli/Commands/: AddressCommand.swift  ApplySignaturesCommand.swift  BroadcastCommand.swift  CompareAddressCommand.swift  ExtractSighashesCommand.swift  InitCommand.swift  InspectCommand.swift  ProposeCommand.swift  ProveCommand.swift  SendCommand.swift  SignCommand.swift  SyncCommand.swift  TestUfvkCommand.swift
pczt-cli/Signer/: LocalSigner.swift
pczt-cli/Utils/: Encoding.swift  StateManager.swift
pczt-cli/Wallet/: SeedManager.swift  WalletManager.swift
src/: address.rs  diversifier.rs  keys.rs  lib.rs  pczt_signer.rs  secure_derive.rs  secure_sign.rs  signing.rs  transparent.rs
tests/: address_derivation.rs  sapling_derivation.rs  ufvk_encoding.rs  unified_address_encoding.rs
