[package]
name = "zcash_signer"
version = "0.1.0"
edition = "2021"
description = "Minimal Zcash signing primitives for watchOS - ZIP-32 key derivation and RedPallas signing"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Core crypto - all no_std compatible
# RedPallas signatures on Pallas curve (Orchard)
reddsa = { version = "0.5", default-features = false, features = ["alloc"] }
# Pallas curve for Orchard scalars and points
pasta_curves = { version = "0.5", default-features = false, features = ["alloc"] }
# Jubjub curve for Sapling scalars and points
jubjub = { version = "0.10", default-features = false }
# Field and group traits
ff = { version = "0.13", default-features = false }
group = { version = "0.13", default-features = false, features = ["alloc"] }

# Sinsemilla for IVK derivation
sinsemilla = { version = "0.1", default-features = false }

# BLAKE2b for ZIP-32 PRF^expand
blake2b_simd = { version = "1.0", default-features = false }

# Random number generation via callback
rand_core = { version = "0.6", default-features = false }

# BIP-44 transparent key derivation (secp256k1)
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

# RIPEMD-160 for P2PKH address derivation
ripemd = { version = "0.1", default-features = false }

# AES for FF1-AES diversifier derivation (ZIP-32)
aes = { version = "0.8", default-features = false }

# BLAKE2s for Sapling DiversifyHash (with personalization support)
blake2s_simd = { version = "1.0", default-features = false }

# Base58check for transparent addresses
bs58 = { version = "0.5", default-features = false, features = ["alloc", "check"] }
bip39 = { version = "2", default-features = false, features = ["std"], optional = true }
orchard = { git = "https://github.com/perpetua-engineering/orchard", branch = "perpetua", default-features = false, features = ["std"], optional = true }
zip32 = { version = "0.2.0", default-features = false, optional = true }
hex = { version = "0.4", optional = true }

[dev-dependencies]
# For validation against reference implementations
hex = "0.4"

[[bin]]
name = "verify_rk"
path = "src/bin/verify_rk.rs"
required-features = ["debug-tools"]

[features]
default = []
std = []
debug-tools = ["dep:bip39", "dep:orchard", "dep:zip32", "dep:hex", "std"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no unwinding
strip = true         # Strip symbols

# Patches for watchOS compatibility
[patch.crates-io]
# Patch constant_time_eq to fix arm64_32 support
# The upstream NEON code uses hardcoded u64 which fails on arm64_32 (32-bit pointers)
constant_time_eq = { path = "vendor/constant_time_eq" }
# Patch blake2b_simd to disable std by default
# The std feature enables CPU feature detection which hangs on watchOS simulator
blake2b_simd = { path = "vendor/blake2b_simd" }
